--- a/croupier/templates/croupier/index.html
+++ b/croupier/templates/croupier/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Croupier</title>
+  <link href="{{ STATIC_URL }}croupier/app.css" rel="stylesheet">
   <script src="{{ STATIC_URL }}croupier/app.js" type="text/javascript"></script>
 </head>
 <body>
