--- a/croupier/templates/croupier/index.html
+++ b/croupier/templates/croupier/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Croupier</title>
-  <link href="{{ STATIC_URL }}croupier/app.css" rel="stylesheet">
-  <script src="{{ STATIC_URL }}croupier/app.js" type="text/javascript"></script>
+  <link href="{{ STATIC_URL }}croupier/css/app.css" rel="stylesheet">
+  <script src="{{ STATIC_URL }}croupier/js/app.js" type="text/javascript"></script>
 </head>
-<body>
+<body id="page">
 </body>
 </html>
