Search page scaffolding

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,7 @@
 @import (less) "pure.css";
 @import (less) "ionicons.css";
 @import (less) "fonts.css";
-@import (less) "menu.css";
+
+#header {
+  margin: 0.5em 0;
+}
