--- a/croupier/templates/croupier/index.html
+++ b/croupier/templates/croupier/index.html
@@ -7,6 +7,6 @@
   <link href="{{ STATIC_URL }}croupier/css/app.css" rel="stylesheet">
   <script src="{{ STATIC_URL }}croupier/js/app.js" type="text/javascript"></script>
 </head>
-<body id="page">
+<body id="home">
 </body>
 </html>
