--- a/app/scripts/templates/layouts/application.html
+++ b/app/scripts/templates/layouts/application.html
@@ -1,6 +1,11 @@
-<div class="pure-menu pure-menu-open pure-menu-horizontal">
-  <a href="#" class="pure-menu-heading">Croupier</a>
-  <ul>
-    <li id="search"></li>
-  </ul>
+<div class="pure-g-r">
+  <div class="pure-u-1-3"></div>
+  <div id="header" class="pure-u-1-3"></div>
 </div>
+
+<div class="pure-g-r">
+  <div class="pure-u-1-3"></div>
+  <div id="content" class="pure-u-1-3"></div>
+</div>
+
+<div id="footer"></div>
