Added app router

--- a/app/scripts/templates/search/form.html
+++ b/app/scripts/templates/search/form.html
@@ -1,1 +1,1 @@
-<input type="text" class="pure-input-rounded pure-input-1" placeholder="Search">
+<input name="q" type="text" class="pure-input-rounded pure-input-1" placeholder="Search">
