Hide/show card's back

--- a/app/scripts/templates/card.html
+++ b/app/scripts/templates/card.html
@@ -1,6 +1,6 @@
-<p>
-  <%= front %>
-</p>
-<p style="font-weight: bold">
+<%= front %>
+
+<div class="back" style="display: none; font-weight: bold">
+  <hr />
   <%= back %>
-</p>
+</div>
