Enabled hidden answers option

--- a/app/scripts/templates/layouts/deck.html
+++ b/app/scripts/templates/layouts/deck.html
@@ -6,4 +6,6 @@
 <button id="answer">answer</button>
 <button id="edit">edit</button>
 
+<label><input id="hide" type="checkbox" checked> hide answer</label>
+
 <div id="card"></div>
